# hydro-tools

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  setup.cfg
docs/: riparian_connectivity.md
src/hydrotools/: __init__.py  config.py  elevation.py  interpolate.py  morphology.py  raster.py  streams.py  utils.py  watershed.py
tests/: __init__.py  test_raster.py  test_watershed.py
tests/data-files/: dem.tif  precip.tif
