[metadata]
name = hydro-tools
version = attr: hydrotools.__version__
description = Hydrological and terrain utilities for preparing data and performing simulations
long_description = file: README.md
long_description_content_type = text/markdown
author = bluegeo
author_email = devin.cairns@bluegeo.ca
url = https://github.com/bluegeo/hydro-tools
project_urls =
    Documentation = https://github.com/hydro-tools
    Issues = https://github.com/bluegeo/hydro-tools/issues
keywords =
    hydrology
    geomorphology
    climate
    hydrogeology
    terrain
    riparian
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    rasterio
    pyproj
    grass-session
    dask
    dask-image
    numpy
    scikit-image
    scikit-learn
    numba
    fiona
    shapely
    matplotlib

[options.packages.find]
where = src
